# plan-a-trip-to-mars

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .python-version  :wq  CODE_OF_CONDUCT.md  LICENSE  README.md  create_setup.py  dprint.json  environment.osx-64.yml  environment.osx-arm64.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: installs.yml  tests.yml
src/plan_a_trip_to_mars/: __init__.py  __main__.py  config.py  scenarios.py  simulation.py  universe.py
src/plan_a_trip_to_mars/misc/: animate.py  precode2.py
tests/: __init__.py  test_main.py  test_scenarios.py
